--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <h3>Monthly Rate: <span id="monthlyRate"></span></h3>
     <table id="amortization"></table>
 </div>
-<script src="build/main.bundle.js"></script>
+<script src="build/app.bundle.js"></script>
 </body>
 </html>
